--- a/pages/about.html
+++ b/pages/about.html
@@ -242,7 +242,7 @@
                 complexity.
               </p>
               <div class="thumbnail">
-                <img src="../assets/images/about/16.webp" alt="about" />
+                <img src="../assets/photos/5.jpg" alt="about" />
               </div>
             </div>
             <div class="right-are">
@@ -424,7 +424,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/08.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Daniel Brown</h5>
@@ -435,7 +435,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/09.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Christopher Henry</h5>
@@ -446,7 +446,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/10.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">John Smith</h5>
@@ -457,7 +457,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/11.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Gabriel Benjamin</h5>
@@ -468,7 +468,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/12.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Samuel Isaac</h5>
@@ -479,7 +479,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/13.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Samuel Isaac</h5>
@@ -490,7 +490,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/14.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Michael Johnson</h5>
@@ -501,7 +501,7 @@
         <div class="col-lg-3">
           <div class="single-team-area-start-round">
             <a href="#" class="thumbnail-team">
-              <img src="../assets/images/team/15.webp" alt="team" />
+              <img src="../assets/photos/2.svg" alt="team" />
             </a>
             <div class="inner">
               <h5 class="name">Robert Wilson</h5>
@@ -515,6 +515,16 @@
 
   <!-- Clients Carousel (from about-cyber.html) -->
   <div class="rts-brand-area rts-section-gap">
+    <style>
+      /* Normalize partner logo sizing in carousel */
+      .brand-slider-wrapper .single-brand img {
+        max-height: 90px;
+        width: auto;
+        object-fit: contain;
+        display: block;
+        margin: 0 auto;
+      }
+    </style>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -528,62 +538,62 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/13.svg" alt="brand" />
+                    <img src="../assets/partners/amazon-web-services-1.svg" alt="Amazon Web Services" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/14.svg" alt="brand" />
+                    <img src="../assets/partners/Bosch-Logo-2001.png" alt="Bosch" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/15.svg" alt="brand" />
+                    <img src="../assets/partners/Cisco_logo_blue_2016.svg.png" alt="Cisco" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/16.svg" alt="brand" />
+                    <img src="../assets/partners/D-Link-Logo.wine.svg" alt="D-Link" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/17.svg" alt="brand" />
+                    <img src="../assets/partners/Dell_EMC-Logo.wine.svg" alt="Dell EMC" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/18.svg" alt="brand" />
+                    <img src="../assets/partners/honey.png" alt="Honeywell" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/13.svg" alt="brand" />
+                    <img src="../assets/partners/HPE_Helion-Logo.wine.svg" alt="HPE Helion" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/14.svg" alt="brand" />
+                    <img src="../assets/partners/ibm_PNG19660.png" alt="IBM" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/15.svg" alt="brand" />
+                    <img src="../assets/partners/Microsoft_logo_(2012).png" alt="Microsoft" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/16.svg" alt="brand" />
+                    <img src="../assets/partners/lg.png" alt="LG" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/17.svg" alt="brand" />
+                    <img src="../assets/partners/Red_Hat-Logo.wine.svg" alt="Red Hat" />
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="single-brand">
-                    <img src="../assets/images/brand/18.svg" alt="brand" />
+                    <img src="../assets/partners/peplink.png" alt="Partner" />
                   </div>
                 </div>
               </div>
@@ -593,6 +603,27 @@
       </div>
     </div>
   </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const brandSwiperEl = document.querySelector('.mySwiper-brand-list');
+      if (brandSwiperEl && !brandSwiperEl.dataset.bound) {
+        // Continuous scrolling effect with looped autoplay
+        new Swiper('.mySwiper-brand-list', {
+          loop: true,
+          slidesPerView: 'auto',
+          spaceBetween: 40,
+          speed: 6000,
+          allowTouchMove: false,
+          autoplay: {
+            delay: 0,
+            disableOnInteraction: false,
+          },
+        });
+        brandSwiperEl.dataset.bound = 'true';
+      }
+    });
+  </script>
   <!-- Case Studies Section (from index-seven.html) -->
   <div class="rts-case-studies rts-section-gap">
     <div class="container">
