--- a/index.html
+++ b/index.html
@@ -526,10 +526,10 @@
                       <div class="about-content-three">
                         <div class="image-top-area-about">
                           <div class="thumbnail-1">
-                            <img src="assets/images/about/03.webp" alt="about" />
+                            <img src="assets/photos/30.jpg" alt="about" />
                           </div>
                           <div class="thumbnail-2">
-                            <img src="assets/images/about/04.webp" alt="about" />
+                            <img src="assets/photos/27.jpg" alt="about" />
                           </div>
                         </div>
                         <div class="content-area-about">
@@ -577,7 +577,7 @@
                       <div class="about-content-three two">
                         <div class="image-top-area-about">
                           <div class="thumbnail">
-                            <img src="assets/images/about/18.webp" alt="about" />
+                            <img src="assets/photos/17.jpg" alt="about" />
                           </div>
                         </div>
                         <div class="content-area-about">
@@ -627,7 +627,7 @@
                       <div class="about-content-three three">
                         <div class="image-top-area-about">
                           <div class="thumbnail">
-                            <img src="assets/images/about/19.webp" alt="about" />
+                            <img src="assets/photos/27.jpg" alt="about" />
                           </div>
                         </div>
                         <div class="content-area-about">
@@ -781,7 +781,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/01.webp" alt="case" />
+                    <img src="assets/photos/1.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Government & Public Sector</span>
@@ -792,7 +792,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/02.webp" alt="case" />
+                    <img src="assets/photos/11.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Banking & Financial Services</span>
@@ -803,7 +803,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/03.webp" alt="case" />
+                    <img src="assets/photos/8.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Telecom</span>
@@ -814,7 +814,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/04.webp" alt="case" />
+                    <img src="assets/photos/9.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Steel & Power</span>
@@ -825,7 +825,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/04.webp" alt="case" />
+                    <img src="assets/photos/12.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Metal & Mining</span>
@@ -836,7 +836,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/04.webp" alt="case" />
+                    <img src="assets/photos/10.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Cement & Chemical</span>
@@ -847,7 +847,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/04.webp" alt="case" />
+                    <img src="assets/photos/20.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">Education & Universities</span>
@@ -858,7 +858,7 @@
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
-                    <img src="assets/images/case/04.webp" alt="case" />
+                    <img src="assets/photos/3.jpg" alt="case" />
                   </a>
                   <a href="pages/impact.html" class="inner-content" style="text-align: center">
                     <span style="display: block">NGO & Development Sector</span>
@@ -882,18 +882,8 @@
             <div class="title-left-wrapper">
               <span class="pre">Case Studies</span>
               <h2 class="title rts-text-anime-style-1">
-                Our Success Stories<br />
-                (Featured Case Studies)
+                Featured Case Studies
               </h2>
-            </div>
-            <div class="right-area">
-              <p class="disc">
-                we deliver results. Our success is measured by the protection
-                we provide to our clients, across industries and around the
-                world.
-              </p>
-              <a href="pages/solutions.html" class="btn-line"><span>View All Cases</span><i
-                  class="fa-solid fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -904,14 +894,14 @@
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    <span>2021. </span> State Network Infrastructure Upgrade
-                  </button>
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                      aria-expanded="true" aria-controls="collapseOne">
+                      State Network Infrastructure Upgrade
+                    </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <img src="assets/images/case/05.webp" alt="why-choose" />
+                    <img src="assets/photos/4.jpg" alt="why-choose" />
                     <p class="disc">
                       Core network systems upgraded across multiple offices to
                       support stable connectivity and improved system
@@ -922,15 +912,15 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <span>2022. </span>Cloud & Data Platform <br />
-                    Modernisation
-                  </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Cloud & Data Platform <br />
+                      Modernisation
+                    </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <img src="assets/images/case/05.webp" alt="why-choose" />
+                    <img src="assets/photos/21.jpg" alt="why-choose" />
                     <p class="disc">
                       Migration and restructuring of digital platforms to
                       support smoother access, storage, and reporting
@@ -941,15 +931,15 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <span>2023. </span>City Surveillance &<br />
-                    Monitoring Integration
-                  </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      City Surveillance &<br />
+                      Monitoring Integration
+                    </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <img src="assets/images/case/05.webp" alt="why-choose" />
+                    <img src="assets/photos/15.jpg" alt="why-choose" />
                     <p class="disc">
                       Deployment of connected monitoring systems with
                       centralised viewing for coordinated field and control
@@ -960,15 +950,15 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    <span>2024. </span>Multi-Department Digital Systems
-                    Rollout
-                  </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      Multi-Department Digital Systems
+                      Rollout
+                    </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <img src="assets/images/case/05.webp" alt="why-choose" />
+                    <img src="assets/photos/23.jpg" alt="why-choose" />
                     <p class="disc">
                       Integrated IT, connectivity, and monitoring platforms
                       deployed across departments to support shared digital
