--- a/pages/impact.html
+++ b/pages/impact.html
@@ -551,16 +551,7 @@
         </div>
       </div>
 
-      <div class="right-rating-area">
-        <div class="rating-content">
-          <img src="../assets/images/logo/02.svg" alt="logo" class="logo" />
-          <img
-            src="../assets/images/banner/02.png"
-            alt=""
-            class="bottom-content"
-          />
-        </div>
-      </div>
+      <!-- Trustpilot-style rating element removed as requested -->
     </div>
 
     <!-- ================= METRICS / FUN FACTS (FIXED) ================= -->
@@ -739,6 +730,15 @@
     </div>
     <!-- Clients Carousel (from about-cyber.html) -->
     <div class="rts-brand-area rts-section-gap">
+      <style>
+        .brand-slider-wrapper .single-brand img {
+          max-height: 90px;
+          width: auto;
+          object-fit: contain;
+          display: block;
+          margin: 0 auto;
+        }
+      </style>
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -756,62 +756,62 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/13.svg" alt="brand" />
+                      <img src="../assets/partners/amazon-web-services-1.svg" alt="Amazon Web Services" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/14.svg" alt="brand" />
+                      <img src="../assets/partners/Bosch-Logo-2001.png" alt="Bosch" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/15.svg" alt="brand" />
+                      <img src="../assets/partners/Cisco_logo_blue_2016.svg.png" alt="Cisco" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/16.svg" alt="brand" />
+                      <img src="../assets/partners/D-Link-Logo.wine.svg" alt="D-Link" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/17.svg" alt="brand" />
+                      <img src="../assets/partners/Dell_EMC-Logo.wine.svg" alt="Dell EMC" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/18.svg" alt="brand" />
+                      <img src="../assets/partners/honey.png" alt="Honeywell" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/13.svg" alt="brand" />
+                      <img src="../assets/partners/HPE_Helion-Logo.wine.svg" alt="HPE Helion" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/14.svg" alt="brand" />
+                      <img src="../assets/partners/ibm_PNG19660.png" alt="IBM" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/15.svg" alt="brand" />
+                      <img src="../assets/partners/Microsoft_logo_(2012).svg.png" alt="Microsoft" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/16.svg" alt="brand" />
+                      <img src="../assets/partners/png-clipart-lg-logo-lg-logo-television-text.png" alt="LG" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/17.svg" alt="brand" />
+                      <img src="../assets/partners/Red_Hat-Logo.wine.svg" alt="Red Hat" />
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="single-brand">
-                      <img src="../assets/images/brand/18.svg" alt="brand" />
+                      <img src="../assets/partners/w=4268,h=2146.png" alt="Partner" />
                     </div>
                   </div>
                 </div>
@@ -820,6 +820,25 @@
           </div>
         </div>
       </div>
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          const brandSwiperEl = document.querySelector('.mySwiper-brand-list');
+          if (brandSwiperEl && !brandSwiperEl.dataset.bound) {
+            new Swiper('.mySwiper-brand-list', {
+              loop: true,
+              slidesPerView: 'auto',
+              spaceBetween: 40,
+              speed: 6000,
+              allowTouchMove: false,
+              autoplay: {
+                delay: 0,
+                disableOnInteraction: false,
+              },
+            });
+            brandSwiperEl.dataset.bound = 'true';
+          }
+        });
+      </script>
     </div>
     <!-- Project Two / Transformative IT Solutions -->
     <section class="project-two bg_image-project-two rts-section-gapTop">
