--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               and smart tech, our solutions help organisations stay ready for
               what comes next.
             </p>
-            <a href="pages/solutions.html" class="btn-line"><span>Explore All Services</span>
+            <a href="javascript:void(0)" class="btn-line"><span>Explore All Services</span>
               <i class="fa-solid fa-chevron-right"></i></a>
           </div>
         </div>
@@ -381,7 +381,7 @@
                 Smart systems that automate tasks and bring real-time insights
                 to operations.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -398,7 +398,7 @@
                 Reliable infrastructure and networks that form the backbone of
                 daily work.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -415,7 +415,7 @@
                 Systems that support monitoring, access control, and safer
                 environments.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -431,7 +431,7 @@
               <p class="disc extra-space-t2">
                 Steady wireless and wired connections that keep teams linked.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -448,7 +448,7 @@
                 Clear dashboards and analytics that help teams see what
                 matters.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -467,7 +467,7 @@
                 Modern tools that bring automation, device connectivity, and
                 future readiness.
               </p>
-              <a href="pages/solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -1223,9 +1223,9 @@
             <li class="has-droupdown">
               <a href="#" class="main">Solutions</a>
               <ul class="submenu mm-collapse">
-                <li><a href="pages/solutions.html">All Solutions</a></li>
-                <li><a href="pages/solutions.html">Cybersecurity</a></li>
-                <li><a href="pages/solutions.html">Cloud Services</a></li>
+                <li><a href="javascript:void(0)">All Solutions</a></li>
+                <li><a href="javascript:void(0)">Cybersecurity</a></li>
+                <li><a href="javascript:void(0)">Cloud Services</a></li>
               </ul>
             </li>
             <li>
