--- a/pages/ai-intelligent-solutions.html
+++ b/pages/ai-intelligent-solutions.html
@@ -224,7 +224,7 @@
               streamline your operations, enhance security, and boost overall
               productivity.
             </p>
-            <a href="solutions.html" class="btn-line"><span>View All Solutions</span>
+            <a href="javascript:void(0)" class="btn-line"><span>View All Solutions</span>
               <i class="fa-solid fa-chevron-right"></i></a>
           </div>
         </div>
@@ -239,7 +239,7 @@
                 Visual monitoring systems that help detect events and patterns
                 automatically.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -255,7 +255,7 @@
               <p class="disc">
                 Models that support planning through trend identification.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -271,7 +271,7 @@
               <p class="disc">
                 Automation that reduces manual steps in routine workflows.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -287,7 +287,7 @@
               <p class="disc">
                 Systems that help track performance and efficiency.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -304,7 +304,7 @@
                 Digital interfaces for easier system interaction and
                 reporting.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
@@ -321,7 +321,7 @@
                 Local data processing for faster response and reduced
                 dependency.
               </p>
-              <a href="solutions.html" class="round-btn">
+              <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
               </a>
             </div>
