--- a/pages/connectivity-solutions.html
+++ b/pages/connectivity-solutions.html
@@ -278,7 +278,7 @@
                 We provide structured connectivity solutions that keep teams,
                 systems, and locations linked.
               </p>
-              <a href="solutions.html" class="btn-line"
+              <a href="javascript:void(0)" class="btn-line"
                 ><span>Explore All Services</span>
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
