--- a/pages/data-bi-analytics.html
+++ b/pages/data-bi-analytics.html
@@ -276,7 +276,7 @@
                 We help organisations organise, visualise, and analyse data to
                 support everyday decision-making.
               </p>
-              <a href="solutions.html" class="btn-line"
+              <a href="javascript:void(0)" class="btn-line"
                 ><span>Explore All Services</span>
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
