--- a/pages/impact.html
+++ b/pages/impact.html
@@ -856,7 +856,7 @@
                   Our case studies provide a deep dive into the challenges faced
                   and the solutions that delivered remarkable results.
                 </p>
-                <a href="solutions.html" class="btn-line">
+                <a href="javascript:void(0)" class="btn-line">
                   <span>View All Case</span>
                   <i class="fa-solid fa-chevron-right"></i>
                 </a>
