--- a/pages/life-at-sos.html
+++ b/pages/life-at-sos.html
@@ -264,7 +264,7 @@
                   These values guide how we work with each other and with our
                   clients, across projects and locations.
                 </p>
-                <a href="solutions.html" class="btn-line"
+                <a href="javascript:void(0)" class="btn-line"
                   ><span>View all Services</span>
                   <i class="fa-solid fa-chevron-right"></i
                 ></a>
