--- a/pages/new-age-technologies.html
+++ b/pages/new-age-technologies.html
@@ -276,7 +276,7 @@
                 We deploy emerging technologies that enhance operational
                 visibility and digital workflows.
               </p>
-              <a href="solutions.html" class="btn-line"
+              <a href="javascript:void(0)" class="btn-line"
                 ><span>View All Solutions</span>
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
@@ -292,7 +292,7 @@
                 <p class="disc">
                   Connected monitoring for assets and utilities.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -307,7 +307,7 @@
               <div class="content">
                 <h3 class="title">Device Integration Platforms</h3>
                 <p class="disc">Bringing hardware and software together.</p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -322,7 +322,7 @@
               <div class="content">
                 <h3 class="title">Smart City & Infrastructure Systems</h3>
                 <p class="disc">Technology for large-scale public projects.</p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -337,7 +337,7 @@
               <div class="content">
                 <h3 class="title">Blockchain Applications</h3>
                 <p class="disc">Secure data and transaction platforms.</p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -352,7 +352,7 @@
               <div class="content">
                 <h3 class="title">Smart Contracts & Automation</h3>
                 <p class="disc">Digital workflow validation tools.</p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -367,7 +367,7 @@
               <div class="content">
                 <h3 class="title">Technology POCs & Pilots</h3>
                 <p class="disc">Testing new digital models safely.</p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
