--- a/pages/software-engineering.html
+++ b/pages/software-engineering.html
@@ -280,7 +280,7 @@
                 operations, system integrations, and long-term service delivery
                 — across offices, field locations, and large-scale programs.
               </p>
-              <a href="solutions.html" class="btn-line"
+              <a href="javascript:void(0)" class="btn-line"
                 ><span>View All Solutions</span>
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
@@ -297,7 +297,7 @@
                   Applications built for specific workflows, departments, and
                   reporting needs.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -315,7 +315,7 @@
                   Central platforms for approvals, tracking, and operational
                   coordination.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -333,7 +333,7 @@
                   Software that connects machines, sensors, and field devices to
                   dashboards.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -350,7 +350,7 @@
                 <p class="disc">
                   Secure access to data, system status, and performance metrics.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -368,7 +368,7 @@
                   Connecting new software with existing IT, ERP, and network
                   systems.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
@@ -386,7 +386,7 @@
                   Performance tuning, security updates, and feature improvements
                   over time.
                 </p>
-                <a href="solutions.html" class="round-btn">
+                <a href="javascript:void(0)" class="round-btn">
                   <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
                 </a>
               </div>
