--- a/pages/security-surveillance.html
+++ b/pages/security-surveillance.html
@@ -278,7 +278,7 @@
                 We deploy integrated surveillance and access systems that
                 support monitoring, safety, and operational coordination.
               </p>
-              <a href="solutions.html" class="btn-line"
+              <a href="javascript:void(0)" class="btn-line"
                 ><span>Explore All Services</span>
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
