--- a/pages/data-bi-analytics.html
+++ b/pages/data-bi-analytics.html
@@ -779,7 +779,7 @@
       </div>
     </div>
 
-    <div class="loader-wrapper"><div class="loader"></div></div>
+    <div class="loader-wrapper"><div class="loader-logo"><img src="../assets/images/logo/02.svg" alt="SOS Infocity" /></div></div>
     <div class="progress-wrap">
       <svg
         class="progress-circle svg-content"
