--- a/index.html
+++ b/index.html
@@ -1241,9 +1241,9 @@
 
   <!-- Loader -->
   <div class="loader-wrapper">
-    <div class="loader"></div>
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
+    <div class="loader-logo">
+      <img src="assets/images/logo/02.svg" alt="SOS Infocity" />
+    </div>
   </div>
 
   <!-- Progress Bar -->
