--- a/pages/ai-intelligent-solutions.html
+++ b/pages/ai-intelligent-solutions.html
@@ -685,7 +685,9 @@
   </div>
 
   <div class="loader-wrapper">
-    <div class="loader"></div>
+    <div class="loader-logo">
+      <img src="../assets/images/logo/02.svg" alt="SOS Infocity" />
+    </div>
   </div>
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
