--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                                     </div>
                                     <div class="info">
                                       <h5 class="title">AI Intelligent Systems</h5>
-                                      <p class="details">Smart platforms for automation, monitoring, and decision-making</p>
+                                      <p class="details">Smart platforms for automation, monitoring, and decision-making
+                                      </p>
                                     </div>
                                   </div>
                                 </a>
@@ -203,7 +204,8 @@
                                     </div>
                                     <div class="info">
                                       <h5 class="title">Data BI Analytics</h5>
-                                      <p class="details">Converting operational data into actionable business insights</p>
+                                      <p class="details">Converting operational data into actionable business insights
+                                      </p>
                                     </div>
                                   </div>
                                 </a>
@@ -331,7 +333,8 @@
                   Powering Intelligence Solutions
                 </h2>
                 <p>
-                 We support organisations with IT, networks, data, security, and emerging technology—built for clarity and long-term stability.
+                  We support organisations with IT, networks, data, security, and emerging technology—built for clarity
+                  and long-term stability.
                 </p>
                 <div class="button-wrapper">
                   <a href="pages/about.html" class="rts-btn btn-primary btn-white">
@@ -894,10 +897,10 @@
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                      aria-expanded="true" aria-controls="collapseOne">
-                      State Network Infrastructure Upgrade
-                    </button>
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    State Network Infrastructure Upgrade
+                  </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
@@ -912,11 +915,11 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Cloud & Data Platform <br />
-                      Modernisation
-                    </button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Cloud & Data Platform <br />
+                    Modernisation
+                  </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
@@ -931,11 +934,11 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      City Surveillance &<br />
-                      Monitoring Integration
-                    </button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    City Surveillance &<br />
+                    Monitoring Integration
+                  </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
@@ -950,11 +953,11 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      Multi-Department Digital Systems
-                      Rollout
-                    </button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Multi-Department Digital Systems
+                    Rollout
+                  </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
@@ -1197,7 +1200,8 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                . SOS Infocity. All Rights Reserved. <br /> Designed & Developed by <a href="https://greyplatforms.com" target="_blank">Grey Platforms</a>
+                . SOS Infocity. All Rights Reserved. <br /> Designed & Developed by <a href="https://greyplatforms.com"
+                  target="_blank">Grey Platforms</a>
               </p>
             </div>
           </div>
@@ -1302,6 +1306,10 @@
       });
     });
   </script>
+
+  <!-- ================= SOS CHATBOT WIDGET ================= -->
+  <script src="assets/js/chatbot-widget.js"></script>
+
 </body>
 
 </html>
