--- a/index.html
+++ b/index.html
@@ -381,8 +381,7 @@
             <div class="content">
               <h3 class="title">AI-Based & Intelligent Technology</h3>
               <p class="disc">
-                Smart systems that automate tasks and bring real-time insights
-                to operations.
+                Smart systems that automate tasks and bring real-time insights to your business operations.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -397,9 +396,8 @@
             </div>
             <div class="content">
               <h3 class="title">IT & Network Solutions</h3>
-              <p class="disc extra-space">
-                Reliable infrastructure and networks that form the backbone of
-                daily work.
+              <p class="disc">
+                Reliable infrastructure and networks that form the backbone of your daily work operations.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -414,9 +412,8 @@
             </div>
             <div class="content">
               <h3 class="title">Security & Surveillance Solutions</h3>
-              <p class="disc extra-space-t3">
-                Systems that support monitoring, access control, and safer
-                environments.
+              <p class="disc">
+                Systems that support monitoring, access control, and safer environments for your organization.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -431,8 +428,8 @@
             </div>
             <div class="content">
               <h3 class="title">Connectivity Solutions</h3>
-              <p class="disc extra-space-t2">
-                Steady wireless and wired connections that keep teams linked.
+              <p class="disc">
+                Steady wireless and wired connections that keep your teams linked and collaborative always.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -447,9 +444,8 @@
             </div>
             <div class="content">
               <h3 class="title">Data, BI & Analytics Solutions</h3>
-              <p class="disc extra-space">
-                Clear dashboards and analytics that help teams see what
-                matters.
+              <p class="disc">
+                Clear dashboards and analytics that help your teams see what matters for better decisions.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -463,12 +459,9 @@
               <img src="assets/images/feature/06.svg" alt="icon" />
             </div>
             <div class="content">
-              <h3 class="title">
-                New-Age Technologies (IoT, Blockchain & Emerging Tech)
-              </h3>
+              <h3 class="title">New-Age Technologies (IoT, Blockchain & Emerging Tech)</h3>
               <p class="disc">
-                Modern tools that bring automation, device connectivity, and
-                future readiness.
+                Modern tools that bring automation, device connectivity, and future readiness to your business.
               </p>
               <a href="javascript:void(0)" class="round-btn">
                 <i class="fa-sharp-duotone fa-light fa-arrow-right"></i>
@@ -995,16 +988,16 @@
       <div class="row mt--40">
         <div class="col-lg-12">
           <div class="accordon-pricing-wrapper-three full-width">
-            <div class="accordion" id="pricingAccordion">
+            <div class="accordion" id="faqAccordion">
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
+                <h2 class="accordion-header" id="faqHeadingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapseOne"
+                    aria-expanded="true" aria-controls="faqCollapseOne">
                     What type of organisations does SOS work with?
                   </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseOne" class="accordion-collapse collapse show" aria-labelledby="faqHeadingOne"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     We work with government bodies, educational institutions,
                     industrial organisations, NGOs, and enterprise clients
@@ -1013,14 +1006,14 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
+                <h2 class="accordion-header" id="faqHeadingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    data-bs-target="#faqCollapseTwo" aria-expanded="false" aria-controls="faqCollapseTwo">
                     Can SOS handle projects across multiple cities or sites?
                   </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqHeadingTwo"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     Yes. Our teams are experienced in delivering and
                     supporting projects across campuses, districts, and
@@ -1029,14 +1022,14 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
+                <h2 class="accordion-header" id="faqHeadingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    data-bs-target="#faqCollapseThree" aria-expanded="false" aria-controls="faqCollapseThree">
                     Do your solutions work with existing systems?
                   </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseThree" class="accordion-collapse collapse" aria-labelledby="faqHeadingThree"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     Our solutions are designed to integrate with current
                     infrastructure wherever possible, so operations continue
@@ -1045,14 +1038,14 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
+                <h2 class="accordion-header" id="faqHeadingFour">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                    data-bs-target="#faqCollapseFour" aria-expanded="true" aria-controls="faqCollapseFour">
                     Does SOS provide support after project completion?
                   </button>
                 </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseFour" class="accordion-collapse collapse" aria-labelledby="faqHeadingFour"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     Yes. We offer ongoing technical support, system
                     monitoring, and maintenance services based on project
@@ -1061,14 +1054,14 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
+                <h2 class="accordion-header" id="faqHeadingFive">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    data-bs-target="#faqCollapseFive" aria-expanded="false" aria-controls="faqCollapseFive">
                     Can projects be customised for specific operational needs?
                   </button>
                 </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseFive" class="accordion-collapse collapse" aria-labelledby="faqHeadingFive"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     Yes. Each deployment is planned according to site
                     conditions, usage requirements, and long-term operational
@@ -1077,14 +1070,14 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSix">
+                <h2 class="accordion-header" id="faqHeadingSix">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                    data-bs-target="#faqCollapseSix" aria-expanded="false" aria-controls="faqCollapseSix">
                     How do we start a discussion with the SOS team?
                   </button>
                 </h2>
-                <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
-                  data-bs-parent="#pricingAccordion">
+                <div id="faqCollapseSix" class="accordion-collapse collapse" aria-labelledby="faqHeadingSix"
+                  data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
                     You can connect through the enquiry form, email, or phone.
                     Our team will review your requirements and guide the next
